// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeekColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-1fkk250-SeekColor"
  >
    <div
      class="css-115vdi9-SeekColor"
      style="display: inline-block;"
    >
      <div
        class="css-gtcl95-SeekColor"
      />
    </div>
    <div
      class="css-1sw4xm2-SeekColor"
    >
      <div
        class="css-4obv92-SeekColor"
      >
        #071d40
      </div>
      <div
        class="css-1mt1r8w-SeekColor"
      >
        @sk-blue-darker
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SeekColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1cxowci"
  >
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-1dvmge9-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #001b38
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-blue-darker
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-79csev-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #042763
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-blue-dark
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-1ynjwgt-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #0d3880
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-blue
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-18fh14v-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #184da8
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-blue-light
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-nd6nth-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #2765cf
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-blue-lighter
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-fdtrmc-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #e60278
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-pink
        </div>
      </div>
    </div>
    <div
      class="css-1fkk250-SeekColor"
    >
      <div
        class="css-115vdi9-SeekColor"
        style="display: inline-block;"
      >
        <div
          class="css-ozltmm-SeekColor"
        />
      </div>
      <div
        class="css-1sw4xm2-SeekColor"
      >
        <div
          class="css-4obv92-SeekColor"
        >
          #157e00
        </div>
        <div
          class="css-1mt1r8w-SeekColor"
        >
          @sk-green
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
